      win32. Callers of the function should do this and use the new
      ``MutableTree.smart_add`` method instead. (Robert Collins)

    * ``bzrlib.add.glob_expand_for_win32`` is now
      ``bzrlib.win32utils.glob_expand``.  (Robert Collins)

    * ``bzrlib.add.FastPath`` is now private and moved to 
      ``bzrlib.mutabletree._FastPath``. (Robert Collins, Martin Pool)

  INTERNALS:

    * New SMTPConnection class to unify email handling.  (Adeodato Simó)

    * New ``-Dlock`` option to log (to ~/.bzr.log) information on when 
      lockdirs are taken or released.  (Martin Pool)

    * ``bzrlib`` Hooks are now nameable using ``Hooks.name_hook``. This 
      allows a nicer UI when hooks are running as the current hook can
      be displayed. (Robert Collins)

    * New method ``_maybe_expand_globs`` on the ``Command`` class for 
      dealing with unexpanded glob lists - e.g. on the win32 platform. This
      was moved from ``bzrlib.add._prepare_file_list``. (Robert Collins)

    * ``bzrlib.add.smart_add`` and ``bzrlib.add.smart_add_tree`` are now
      deprecated in favour of ``MutableTree.smart_add``. (Robert Collins,
      Martin Pool)

  TESTING:

    * Removed the ``--keep-output`` option from selftest and clean up test
      directories as they're used.  This reduces the IO load from 
      running the test suite and cuts the time by about half.
      (Andrew Bennetts, Martin Pool)

    * Add scenarios as a public attribute on the TestAdapter classes to allow
      modification of the generated scenarios before adaption and easier
      testing. (Robert Collins)

    * New testing support class ``TestScenarioApplier`` which multiplies
      out a single teste by a list of supplied scenarios. (RobertCollins)

    * Setting ``repository_to_test_repository`` on a repository_implementations
      test will cause it to be called during repository creation, allowing the
      testing of repository classes which are not based around the Format